deployment/k8s_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: emotion-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emotion-app
  template:
    metadata:
      labels:
        app: emotion-app
    spec:
      containers:
      - name: emotion-app-container
        image: emotion-recognition:latest
        ports:
        - containerPort: 5000
