deployment/k8s_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: emotion-service
spec:
  selector:
    app: emotion-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
