deployment/istio_virtual_service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emotion-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - emotion-gateway
  http:
  - route:
    - destination:
        host: emotion-app
        port:
          number: 5000
